# mlir-interactive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/desevi/: FailureOr.h  IRState.h  InflightResult.h  NodeTypes.h  PassExecuter.h  Scene.h  TransformsRegistry.h  mainwindow.h
include/desevi/Support/: InflightResult.h
include/desevi/graph/: BaseGraphicsItem.h  BaseItem.h  Edge.h  FileNode.h  MLIRModuleLoader.h  NodeBase.h  NodeSocket.h  PipelineNode.h  TransformNode.h
include/mlir-interactive/: InitDefaultTransforms.h  NodeTypes.h  PassExecuter.h  Scene.h  TransformsRegistry.h  mainwindow.h
include/mlir-interactive/Support/: FailureOr.h  InflightResult.h
include/mlir-interactive/graph/: BaseGraphicsItem.h  Edge.h  FileNode.h  MLIRModuleLoader.h  MergeNode.h  NodeBase.h  NodeSocket.h  PassNode.h  PipelineNode.h  SplitNode.h
include/mlir-viewer/: InitDefaultTransforms.h  PassExecuter.h  Scene.h  TransformsRegistry.h  mainwindow.h
include/mlir-viewer/Support/: InflightResult.h
include/mlir-viewer/graph/: BaseGraphicsItem.h  BaseItem.h  Edge.h  FileNode.h  MLIRModuleLoader.h  MergeNode.h  NodeBase.h  NodeSocket.h  PassNode.h  PipelineNode.h  SplitNode.h  TransformNode.h
resources/: icons.qrc
src/: InflightResult.cpp  NodeType.cpp  PassExecuter.cpp  Scene.cpp  mainwindow.cpp  mainwindow.ui
src/Support/: InflightResult.cpp
src/graph/: Edge.cpp  FileNode.cpp  IRNode.cpp  MLIRModuleLoader.cpp  MergeNode.cpp  NodeBase.cpp  NodeSocket.cpp  PassNode.cpp  SplitNode.cpp  TransformNode.cpp
